# simple-cli-jwt

./: README.MD  pyproject.toml
src/: config.py  errors.py  jwt_service.py  main.py  misc.py
